@@ -19,6 +19,11 @@ libjpeg-turbo with older versions of MinGW64, you will now have to add
 [4] Fixed a regression bug in the NSIS script that caused the Windows installer
 build to fail when using the Visual Studio IDE.
 
+[5] Fixed a bug in jpeg_read_coefficients() whereby it would not initialize
+cinfo->image_width and cinfo->image_height if libjpeg v8 emulation was enabled.
+This specifically caused the jpegoptim program to fail if it was linked against
+a version of libjpeg-turbo that was built with libjpeg v8 emulation.
+
 
 1.1.0
 =====
